objects/FinAPI_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>(1000)</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_last_N__c</fullName>
        <defaultValue>(250)</defaultValue>
        <inlineHelpText>Defines the number of Transaction__c records to be processed. The last N in the database will be processed.</inlineHelpText>
        <label>Map last N</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_last_N_before_date__c</fullName>
        <inlineHelpText>Used as latest date to map "Map last N" transactions. If empty, Today() will be used.</inlineHelpText>
        <label>Map last N before date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pwd__c</fullName>
        <label>Pwd</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <defaultValue>(30)</defaultValue>
        <label>Timeframe (last n days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FinAPI Settings</label>
    <pluralLabel>FinAPI Settings</pluralLabel>
</CustomObject>